[package]
name = "char-slice"
version = "1.0.0"
license = "MIT/Apache-2.0"
authors = ["Tim Neumann <mail@timnn.me>"]

keywords = ["string", "char", "slice"]
readme = "README.md"
repository = "https://github.com/TimNN/char-slice"
homepage = "https://github.com/TimNN/char-slice"
documentation = "https://timnn.github.io/char-slice/char_slice"

