[package]
name = "char-slice"
version = "1.0.0"
license = "MIT/Apache-2.0"
authors = ["Tim Neumann <mail@timnn.me>"]

description = "Index strings by character / codepoint index."

keywords = ["string", "char", "slice"]
readme = "README.md"
repository = "https://github.com/TimNN/char-slice"
homepage = "https://github.com/TimNN/char-slice"
documentation = "https://timnn.github.io/char-slice/"

